css/desai_lab_general.css
html {
    overflow-y: scroll;
    /* always show scroll bar */
}

h1 {
    padding-top: 2rem;
    text-align: center;
}

/* The Poppins font gets quite bold. Lighten it for in-text bolding. */
strong {
    font-weight: 600;
}

#takeaway {
    font-size: 2rem;
    color: #404040;
}

.full-width-img {
    width: 100%;
    height: 200px;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}


.fillimgdiv {
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden
}

.fillimgdiv img {
    flex-shrink: 0;
    min-width: 100%;
    min-height: 100%
}

.people_row img {
    border-radius: 15px;
}

.people_row p3 {
    font-size: 0.8em;
}

.people_row p2 {
    font-size: 0.9em;
}

.people_row p1 {
    font-size: 1.1em;
}

.people_row p {
    font-size: 0.8em;
    margin-bottom: 4px;
}

.people_row {
    margin-bottom: 15px;
}

.research_text h3 {
    font-size: 2em;
}

.research_text p {
    display: block;
    font-size: 1.1em;
}

.research_img {
    position: relative;
    margin: 5px auto;
}

.center_img {
    display: block;
    margin-top: 5px;
    margin-bottom: 10px;
}

#publication_list {
    list-style-position: outside;
    list-style-type: disc;
}

#publication_list li {
    font-size: 1.0em;
    margin-bottom: 10px;
    line-height: 18px;
    padding-left: 22px;
    text-indent: -22px;
}

.alumni p {
    font-size: 1.0em;
    line-height: 18px;
    margin-bottom: 5px;
}

.opps h4 {
    font-size: 2.0em;
}


@media screen and (max-width: 600px) {

    .people_row p1 {
        font-size: 1.3em;
    }

    .people_row p2 {
        font-size: 1.2em;
    }

    .people_row p,
    .people_row p3 {
        font-size: 1em;
    }
}

